java/request-url-parser/src/main/java-generated/ws/epigraph/url/parser/UrlParser.java
/*
 * Copyright 2017 Sumo Logic
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// This is a generated file. Not intended for manual editing.
package ws.epigraph.url.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ws.epigraph.url.lexer.UrlElementTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class UrlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == U_ANNOTATION) {
      r = annotation(b, 0);
    }
    else if (t == U_ANON_LIST) {
      r = anonList(b, 0);
    }
    else if (t == U_ANON_MAP) {
      r = anonMap(b, 0);
    }
    else if (t == U_DATA) {
      r = data(b, 0);
    }
    else if (t == U_DATA_ENTRY) {
      r = dataEntry(b, 0);
    }
    else if (t == U_DATA_VALUE) {
      r = dataValue(b, 0);
    }
    else if (t == U_DATUM) {
      r = datum(b, 0);
    }
    else if (t == U_DEFAULT_OVERRIDE) {
      r = defaultOverride(b, 0);
    }
    else if (t == U_ENUM_DATUM) {
      r = enumDatum(b, 0);
    }
    else if (t == U_INPUT_PROJECTION) {
      r = inputProjection(b, 0);
    }
    else if (t == U_LIST_DATUM) {
      r = listDatum(b, 0);
    }
    else if (t == U_MAP_DATUM) {
      r = mapDatum(b, 0);
    }
    else if (t == U_MAP_DATUM_ENTRY) {
      r = mapDatumEntry(b, 0);
    }
    else if (t == U_NON_READ_URL) {
      r = nonReadUrl(b, 0);
    }
    else if (t == U_NULL_DATUM) {
      r = nullDatum(b, 0);
    }
    else if (t == U_OUTPUT_PROJECTION) {
      r = outputProjection(b, 0);
    }
    else if (t == U_PRIMITIVE_DATUM) {
      r = primitiveDatum(b, 0);
    }
    else if (t == U_QID) {
      r = qid(b, 0);
    }
    else if (t == U_QN) {
      r = qn(b, 0);
    }
    else if (t == U_QN_SEGMENT) {
      r = qnSegment(b, 0);
    }
    else if (t == U_QN_TYPE_REF) {
      r = qnTypeRef(b, 0);
    }
    else if (t == U_READ_URL) {
      r = readUrl(b, 0);
    }
    else if (t == U_RECORD_DATUM) {
      r = recordDatum(b, 0);
    }
    else if (t == U_RECORD_DATUM_ENTRY) {
      r = recordDatumEntry(b, 0);
    }
    else if (t == U_REQ_ANNOTATION) {
      r = reqAnnotation(b, 0);
    }
    else if (t == U_REQ_COMA_ENTITY_PROJECTION) {
      r = reqComaEntityProjection(b, 0);
    }
    else if (t == U_REQ_COMA_ENTITY_PROJECTION_REF) {
      r = reqComaEntityProjectionRef(b, 0);
    }
    else if (t == U_REQ_COMA_FIELD_PROJECTION) {
      r = reqComaFieldProjection(b, 0);
    }
    else if (t == U_REQ_COMA_KEY_PROJECTION) {
      r = reqComaKeyProjection(b, 0);
    }
    else if (t == U_REQ_COMA_KEYS_PROJECTION) {
      r = reqComaKeysProjection(b, 0);
    }
    else if (t == U_REQ_COMA_LIST_MODEL_PROJECTION) {
      r = reqComaListModelProjection(b, 0);
    }
    else if (t == U_REQ_COMA_MAP_MODEL_PROJECTION) {
      r = reqComaMapModelProjection(b, 0);
    }
    else if (t == U_REQ_COMA_MODEL_PROJECTION) {
      r = reqComaModelProjection(b, 0);
    }
    else if (t == U_REQ_COMA_MULTI_TAG_PROJECTION) {
      r = reqComaMultiTagProjection(b, 0);
    }
    else if (t == U_REQ_COMA_MULTI_TAG_PROJECTION_ITEM) {
      r = reqComaMultiTagProjectionItem(b, 0);
    }
    else if (t == U_REQ_COMA_RECORD_MODEL_PROJECTION) {
      r = reqComaRecordModelProjection(b, 0);
    }
    else if (t == U_REQ_COMA_SINGLE_TAG_PROJECTION) {
      r = reqComaSingleTagProjection(b, 0);
    }
    else if (t == U_REQ_ENTITY_MULTI_TAIL) {
      r = reqEntityMultiTail(b, 0);
    }
    else if (t == U_REQ_ENTITY_MULTI_TAIL_ITEM) {
      r = reqEntityMultiTailItem(b, 0);
    }
    else if (t == U_REQ_ENTITY_PATH) {
      r = reqEntityPath(b, 0);
    }
    else if (t == U_REQ_ENTITY_POLYMORPHIC_TAIL) {
      r = reqEntityPolymorphicTail(b, 0);
    }
    else if (t == U_REQ_ENTITY_SINGLE_TAIL) {
      r = reqEntitySingleTail(b, 0);
    }
    else if (t == U_REQ_FIELD_PATH) {
      r = reqFieldPath(b, 0);
    }
    else if (t == U_REQ_FIELD_PATH_ENTRY) {
      r = reqFieldPathEntry(b, 0);
    }
    else if (t == U_REQ_MAP_MODEL_PATH) {
      r = reqMapModelPath(b, 0);
    }
    else if (t == U_REQ_MODEL_META) {
      r = reqModelMeta(b, 0);
    }
    else if (t == U_REQ_MODEL_MULTI_TAIL) {
      r = reqModelMultiTail(b, 0);
    }
    else if (t == U_REQ_MODEL_MULTI_TAIL_ITEM) {
      r = reqModelMultiTailItem(b, 0);
    }
    else if (t == U_REQ_MODEL_PATH) {
      r = reqModelPath(b, 0);
    }
    else if (t == U_REQ_MODEL_POLYMORPHIC_TAIL) {
      r = reqModelPolymorphicTail(b, 0);
    }
    else if (t == U_REQ_MODEL_SINGLE_TAIL) {
      r = reqModelSingleTail(b, 0);
    }
    else if (t == U_REQ_NAMED_COMA_ENTITY_PROJECTION) {
      r = reqNamedComaEntityProjection(b, 0);
    }
    else if (t == U_REQ_NAMED_TRUNK_ENTITY_PROJECTION) {
      r = reqNamedTrunkEntityProjection(b, 0);
    }
    else if (t == U_REQ_PARAM) {
      r = reqParam(b, 0);
    }
    else if (t == U_REQ_RECORD_MODEL_PATH) {
      r = reqRecordModelPath(b, 0);
    }
    else if (t == U_REQ_STAR_TAG_PROJECTION) {
      r = reqStarTagProjection(b, 0);
    }
    else if (t == U_REQ_TRUNK_ENTITY_PROJECTION) {
      r = reqTrunkEntityProjection(b, 0);
    }
    else if (t == U_REQ_TRUNK_ENTITY_PROJECTION_REF) {
      r = reqTrunkEntityProjectionRef(b, 0);
    }
    else if (t == U_REQ_TRUNK_FIELD_PROJECTION) {
      r = reqTrunkFieldProjection(b, 0);
    }
    else if (t == U_REQ_TRUNK_MAP_MODEL_PROJECTION) {
      r = reqTrunkMapModelProjection(b, 0);
    }
    else if (t == U_REQ_TRUNK_MODEL_PROJECTION) {
      r = reqTrunkModelProjection(b, 0);
    }
    else if (t == U_REQ_TRUNK_RECORD_MODEL_PROJECTION) {
      r = reqTrunkRecordModelProjection(b, 0);
    }
    else if (t == U_REQ_TRUNK_SINGLE_TAG_PROJECTION) {
      r = reqTrunkSingleTagProjection(b, 0);
    }
    else if (t == U_REQ_UNNAMED_COMA_ENTITY_PROJECTION) {
      r = reqUnnamedComaEntityProjection(b, 0);
    }
    else if (t == U_REQ_UNNAMED_OR_REF_COMA_ENTITY_PROJECTION) {
      r = reqUnnamedOrRefComaEntityProjection(b, 0);
    }
    else if (t == U_REQ_UNNAMED_OR_REF_TRUNK_ENTITY_PROJECTION) {
      r = reqUnnamedOrRefTrunkEntityProjection(b, 0);
    }
    else if (t == U_REQ_UNNAMED_TRUNK_ENTITY_PROJECTION) {
      r = reqUnnamedTrunkEntityProjection(b, 0);
    }
    else if (t == U_REQUEST_PARAM) {
      r = requestParam(b, 0);
    }
    else if (t == U_TAG_NAME) {
      r = tagName(b, 0);
    }
    else if (t == U_TYPE_REF) {
      r = typeRef(b, 0);
    }
    else if (t == U_URL) {
      r = url(b, 0);
    }
    else if (t == U_VALUE_TYPE_REF) {
      r = valueTypeRef(b, 0);
    }
    else if (t == U_VAR_TAG_REF) {
      r = varTagRef(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(U_REQ_COMA_MODEL_PROJECTION, U_REQ_TRUNK_MODEL_PROJECTION),
    create_token_set_(U_NON_READ_URL, U_READ_URL, U_URL),
    create_token_set_(U_ANON_LIST, U_ANON_MAP, U_QN_TYPE_REF, U_TYPE_REF),
    create_token_set_(U_DATUM, U_ENUM_DATUM, U_LIST_DATUM, U_MAP_DATUM,
      U_NULL_DATUM, U_PRIMITIVE_DATUM, U_RECORD_DATUM),
  };

  /* ********************************************************** */
  // qid '=' dataValue
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    if (!nextTokenIs(b, "<custom annotation>", U_ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_ANNOTATION, "<custom annotation>");
    r = qid(b, l + 1);
    r = r && consumeToken(b, U_EQ);
    p = r; // pin = 2
    r = r && dataValue(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'list' '[' valueTypeRef ']'
  public static boolean anonList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anonList")) return false;
    if (!nextTokenIs(b, U_LIST)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_ANON_LIST, null);
    r = consumeTokens(b, 1, U_LIST, U_BRACKET_LEFT);
    p = r; // pin = 1
    r = r && report_error_(b, valueTypeRef(b, l + 1));
    r = p && consumeToken(b, U_BRACKET_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'map' '[' typeRef ',' valueTypeRef ']'
  public static boolean anonMap(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "anonMap")) return false;
    if (!nextTokenIs(b, U_MAP)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_ANON_MAP, null);
    r = consumeTokens(b, 1, U_MAP, U_BRACKET_LEFT);
    p = r; // pin = 1
    r = r && report_error_(b, typeRef(b, l + 1));
    r = p && report_error_(b, consumeToken(b, U_COMMA)) && r;
    r = p && report_error_(b, valueTypeRef(b, l + 1)) && r;
    r = p && consumeToken(b, U_BRACKET_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // dataTypeSpec? '<' dataEntry* '>'
  public static boolean data(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_DATA, "<data>");
    r = data_0(b, l + 1);
    r = r && consumeToken(b, U_ANGLE_LEFT);
    p = r; // pin = 2
    r = r && report_error_(b, data_2(b, l + 1));
    r = p && consumeToken(b, U_ANGLE_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // dataTypeSpec?
  private static boolean data_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_0")) return false;
    dataTypeSpec(b, l + 1);
    return true;
  }

  // dataEntry*
  private static boolean data_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!dataEntry(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // qid ':' datum ','?
  public static boolean dataEntry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataEntry")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_DATA_ENTRY, "<data entry>");
    r = qid(b, l + 1);
    r = r && consumeToken(b, U_COLON);
    p = r; // pin = 2
    r = r && report_error_(b, datum(b, l + 1));
    r = p && dataEntry_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, dataValueRecover_parser_);
    return r || p;
  }

  // ','?
  private static boolean dataEntry_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataEntry_3")) return false;
    consumeToken(b, U_COMMA);
    return true;
  }

  /* ********************************************************** */
  // typeRef
  static boolean dataTypeSpec(PsiBuilder b, int l) {
    return typeRef(b, l + 1);
  }

  /* ********************************************************** */
  // data | datum
  public static boolean dataValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, U_DATA_VALUE, "<data value>");
    r = data(b, l + 1);
    if (!r) r = datum(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ! ( '#' | qid | primitiveDatum | '}' | ')' | '>' | ']' | ',' | '?' )
  static boolean dataValueRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataValueRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !dataValueRecover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '#' | qid | primitiveDatum | '}' | ')' | '>' | ']' | ',' | '?'
  private static boolean dataValueRecover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataValueRecover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, U_HASH);
    if (!r) r = qid(b, l + 1);
    if (!r) r = primitiveDatum(b, l + 1);
    if (!r) r = consumeToken(b, U_CURLY_RIGHT);
    if (!r) r = consumeToken(b, U_PAREN_RIGHT);
    if (!r) r = consumeToken(b, U_ANGLE_RIGHT);
    if (!r) r = consumeToken(b, U_BRACKET_RIGHT);
    if (!r) r = consumeToken(b, U_COMMA);
    if (!r) r = consumeToken(b, U_QMARK);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // recordDatum | mapDatum | listDatum | primitiveDatum | enumDatum | nullDatum
  public static boolean datum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "datum")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, U_DATUM, "<datum>");
    r = recordDatum(b, l + 1);
    if (!r) r = mapDatum(b, l + 1);
    if (!r) r = listDatum(b, l + 1);
    if (!r) r = primitiveDatum(b, l + 1);
    if (!r) r = enumDatum(b, l + 1);
    if (!r) r = nullDatum(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'default' varTagRef
  public static boolean defaultOverride(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defaultOverride")) return false;
    if (!nextTokenIs(b, U_DEFAULT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_DEFAULT_OVERRIDE, null);
    r = consumeToken(b, U_DEFAULT);
    p = r; // pin = 1
    r = r && varTagRef(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '#' qid
  public static boolean enumDatum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumDatum")) return false;
    if (!nextTokenIs(b, U_HASH)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_ENUM_DATUM, null);
    r = consumeToken(b, U_HASH);
    p = r; // pin = 1
    r = r && qid(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '<' '+'? reqTrunkFieldProjection
  public static boolean inputProjection(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inputProjection")) return false;
    if (!nextTokenIs(b, "<input projection>", U_ANGLE_LEFT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_INPUT_PROJECTION, "<input projection>");
    r = consumeToken(b, U_ANGLE_LEFT);
    p = r; // pin = 1
    r = r && report_error_(b, inputProjection_1(b, l + 1));
    r = p && reqTrunkFieldProjection(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // '+'?
  private static boolean inputProjection_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inputProjection_1")) return false;
    consumeToken(b, U_PLUS);
    return true;
  }

  /* ********************************************************** */
  // dataTypeSpec? '[' (dataValue ','?)* ']'
  public static boolean listDatum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "listDatum")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_LIST_DATUM, "<list datum>");
    r = listDatum_0(b, l + 1);
    r = r && consumeToken(b, U_BRACKET_LEFT);
    p = r; // pin = 2
    r = r && report_error_(b, listDatum_2(b, l + 1));
    r = p && consumeToken(b, U_BRACKET_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // dataTypeSpec?
  private static boolean listDatum_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "listDatum_0")) return false;
    dataTypeSpec(b, l + 1);
    return true;
  }

  // (dataValue ','?)*
  private static boolean listDatum_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "listDatum_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!listDatum_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "listDatum_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // dataValue ','?
  private static boolean listDatum_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "listDatum_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dataValue(b, l + 1);
    r = r && listDatum_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ','?
  private static boolean listDatum_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "listDatum_2_0_1")) return false;
    consumeToken(b, U_COMMA);
    return true;
  }

  /* ********************************************************** */
  // dataTypeSpec? '(' mapDatumEntry* ')'
  public static boolean mapDatum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "mapDatum")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_MAP_DATUM, "<map datum>");
    r = mapDatum_0(b, l + 1);
    r = r && consumeToken(b, U_PAREN_LEFT);
    p = r; // pin = 2
    r = r && report_error_(b, mapDatum_2(b, l + 1));
    r = p && consumeToken(b, U_PAREN_RIGHT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // dataTypeSpec?
  private static boolean mapDatum_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "mapDatum_0")) return false;
    dataTypeSpec(b, l + 1);
    return true;
  }

  // mapDatumEntry*
  private static boolean mapDatum_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "mapDatum_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!mapDatumEntry(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "mapDatum_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // datum ':' dataValue ','?
  public static boolean mapDatumEntry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "mapDatumEntry")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, U_MAP_DATUM_ENTRY, "<map datum entry>");
    r = datum(b, l + 1);
    r = r && consumeToken(b, U_COLON);
    p = r; // pin = 2
    r = r && report_error_(b, dataValue(b, l + 1));
    r = p && mapDatumEntry_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, dataValueRecover_parser_);
    return r || p;
  }

  // ','?
  private static boolean mapDatumEntry_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "mapDatumEntry_3")) return false;
    consumeToken(b, U_COMMA);
    return true;
  }
